data/derived/comb/progs/unify/prog7933.ml.out
Characters 66-67:
  let g x = truncate (1e6 *. cos (1e-6 *. float x)) in fixpoint (g, 0);;
                                                                    ^
Error: This expression has type int but an expression was expected of type
         ('a -> 'a) * 'a * 'a
